# Memexia

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/memexia_backend/: config.py  database.py  logger.py  main.py
backend/src/memexia_backend/enums/: __init__.py  permissions.py  roles.py
backend/src/memexia_backend/models/: __init__.py  knowledge_base.py  system_setting.py  user.py
backend/src/memexia_backend/routers/: __init__.py
backend/src/memexia_backend/routers/v1/: __init__.py  admin.py  auth.py  graph.py  knowledge_bases.py  nodes.py  users.py
backend/src/memexia_backend/schemas/: __init__.py  ai.py  auth_reset.py  edge.py  graph.py  knowledge_base.py  node.py  system_setting.py  user.py
backend/src/memexia_backend/scripts/: nebula_manager.py
backend/src/memexia_backend/services/: __init__.py  ai_service.py  embedding_service.py  graph_service.py  init_service.py  knowledge_base_service.py  nebula_deployer.py  settings_service.py
backend/src/memexia_backend/services/graph/: __init__.py  base.py  kuzu_backend.py  nebula_backend.py
backend/src/memexia_backend/utils/: __init__.py  config.py  email.py  permissions.py  security.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/project.inlang/: project_id
frontend/src/lib/api/: admin.ts  auth.ts  client.ts  index.ts  knowledge-bases.ts  nodes.ts  types.ts  users.ts
frontend/src/lib/components/: ThreeCanvas.svelte
frontend/src/lib/components/graph/: CreateNodeDialog.svelte  ExpandDialog.svelte  NodeEditDialog.svelte  NodePopup.svelte  ThreeGraph.svelte  index.ts
frontend/src/lib/components/ui/: Button.svelte  Card.svelte  Dialog.svelte  Input.svelte  Loading.svelte  Pagination.svelte  Textarea.svelte  Toast.svelte  Toggle.svelte  index.ts
frontend/src/lib/stores/: auth.ts  index.ts  toast.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/admin/: +layout.svelte  +page.svelte
frontend/src/routes/admin/settings/: +page.svelte
frontend/src/routes/admin/users/: +page.svelte
frontend/src/routes/app/: +layout.svelte
frontend/src/routes/app/dashboard/: +page.svelte
frontend/src/routes/app/knowledge-bases/: +page.svelte
frontend/src/routes/app/profile/: +page.svelte
frontend/src/routes/auth/: +layout.svelte
frontend/src/routes/auth/forgot-password/: +page.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte
(+4 files in other folders)
