[project]
name = "memexia-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "XuChenXu", email = "91937041+ChenXu233@users.noreply.github.com"},
]
dependencies = ["fastapi>=0.124.4", "sqlalchemy>=2.0.45", "uvicorn>=0.38.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "GNU AGPL v3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
