[project]
name = "memexia-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "XuChenXu", email = "91937041+ChenXu233@users.noreply.github.com"},
]
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
    "kuzu>=0.11.0",
    "chromadb>=1.3.7",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.25",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "GNU AGPL v3"}

[project.optional-dependencies]
# NebulaGraph backend (distributed graph database)
nebula = ["nebula3-python>=3.4.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "uvicorn memexia_backend.main:app --host 0.0.0.0 --port 8000"
dev = "uvicorn memexia_backend.main:app --reload --host 127.0.0.1 --port 8000"
